--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,18 +14,27 @@
             "jsx": true
         },
         "ecmaVersion": "latest",
+        "project": "./tsconfig.json",
         "sourceType": "module"
     },
     "plugins": ["react", "@typescript-eslint", "react-hooks"],
     "rules": {
-        "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": ["error"],
-        "react/jsx-filename-extension": [
-            "warn",
-            {
-                "extensions": [".tsx"]
-            }
-        ],
+        // "react/jsx-filename-extension": [
+        //     "warn",
+        //     {
+        //         "extensions": [".tsx"]
+        //     }
+        // ],
+        // "@typescript-eslint/no-shadow": ["error"],
+        // "@typescript-eslint/explicit-function-return-type": [
+            //     "error",
+            //     {
+                //         "allowExpressions": true
+                //     }
+                // ],
+                // "react-hooks/rules-of-hooks": "error",
+                // "react-hooks/exhaustive-deps": "warn",
+        "comma-dangle": ["error", "never"],
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -34,24 +43,34 @@
                 "tsx": "never"
             }
         ],
-        "@typescript-eslint/no-shadow": ["error"],
-        "@typescript-eslint/explicit-function-return-type": [
-            "error",
-            {
-                "allowExpressions": true
-            }
-        ],
-        "max-len": [
-            "error",
-            {
-                "code": 120
-            }
-        ],
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
-        "semi": ["error"],
+        "indent": ["error", 2],
+        // "max-len": [
+        //     "error",
+        //     {
+        //         "code": 120
+        //     }
+        // ],
+        "no-mixed-operators": ["error", {
+            "allowSamePrecedence": true
+        }],
+        "no-use-before-define": "off",
         "no-tabs": ["error"],
-        "indent": ["error", 2]
+        "react/jsx-filename-extension": [
+            "warn",
+            {
+                "extensions": [
+                    ".tsx"
+                ]
+            }
+        ],
+        "react/state-in-constructor": ["error", "never"],
+        "semi": ["error"],
+        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "@typescript-eslint/promise-function-async": ["error"],
+        /* no-return-await must be turned off for @typescript-eslint/return-await */
+        "no-return-await": "off",
+        "@typescript-eslint/return-await": "error"
     },
     "settings": {
         "import/resolver": {
