--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
         "@types/react-dom": "^17.0.11",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-parallax": "^3.3.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
+        "react-scroll-parallax": "^3.0.2",
+        "styled-components": "^5.3.3",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4"
     },
@@ -36,6 +39,7 @@
         ]
     },
     "devDependencies": {
+        "@types/styled-components": "^5.1.22",
         "@typescript-eslint/eslint-plugin": "^5.10.0",
         "@typescript-eslint/parser": "^5.10.0",
         "eslint": "^8.7.0",
