--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     },
     "plugins": ["react", "@typescript-eslint", "react-hooks"],
     "rules": {
+        "import/prefer-default-export": "off",
         // "react/jsx-filename-extension": [
         //     "warn",
         //     {
@@ -55,6 +56,9 @@
         }],
         "no-use-before-define": "off",
         "no-tabs": ["error"],
+        "react/function-component-definition": ["error", {
+            "namedComponents": "arrow-function"
+        }],
         "react/jsx-filename-extension": [
             "warn",
             {
@@ -63,6 +67,7 @@
                 ]
             }
         ],
+        "react/require-default-props": "off",
         "react/state-in-constructor": ["error", "never"],
         "semi": ["error"],
         "@typescript-eslint/explicit-function-return-type": ["error"],
