--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.18",
+        "@mui/styles": "^5.14.18",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
@@ -10,13 +14,13 @@
         "@types/node": "^16.11.21",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "jest": "^27.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-parallax": "^3.3.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "react-scroll-parallax": "^3.0.2",
-        "styled-components": "^5.3.3",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4"
     },
@@ -24,6 +28,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "test:jest": "jest",
         "eject": "react-scripts eject"
     },
     "browserslist": {
