--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,10 +67,13 @@
                 ]
             }
         ],
+        "react/jsx-props-no-spreading": "off",
         "react/require-default-props": "off",
         "react/state-in-constructor": ["error", "never"],
         "semi": ["error"],
-        "@typescript-eslint/explicit-function-return-type": ["error"],
+        "@typescript-eslint/explicit-function-return-type": ["error", {
+            "allowExpressions": true
+        }],
         "@typescript-eslint/no-use-before-define": ["error"],
         "@typescript-eslint/promise-function-async": ["error"],
         /* no-return-await must be turned off for @typescript-eslint/return-await */
