--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@formspree/react": "^2.5.1",
+        "@fortawesome/fontawesome-common-types": "^6.5.1",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@mui/icons-material": "^5.14.19",
         "@mui/material": "^5.14.18",
         "@mui/styles": "^5.14.18",
